--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -56,7 +56,7 @@
 			                    </ul>
 			            </div>
 			            <div class="card-action">
-			              <a href="/events">View All Events</a>
+			              <a href="/calendar">View All Events</a>
 			            </div>
 			          </div>
 			        </div>
@@ -81,7 +81,7 @@
 			                    </ul>
 			            </div>
 			            <div class="card-action">
-			              <a href="/announce">More Blogs</a>
+			              <a href="/blog">More Blogs</a>
 			            </div>
 			          </div>
 			        </div>
