Minutes of the Meeting Tab added

--- a/src/templates/static.html
+++ b/src/templates/static.html
@@ -31,6 +31,8 @@
 		<li><a href="/represent">Meet the Representatives</a></li>
 		<li class="divider"></li>
 		<li><a href="/announce">Announcements</a></li>
+		<li class="divider"></li>
+		<li><a href="/minutes">Minutes of Meetings</a></li>
 	</ul>
 	<ul id="dropdown2" class="dropdown-content center-align">
 		<li><a href="/senate">Student Senate</a></li>
@@ -74,6 +76,8 @@
 								<li><a href="/represent">Meet the Representatives</a></li>
 								<li class="divider"></li>
 								<li><a href="/announce">Announcements</a></li>
+								<li class="divider"></li>
+								<li><a href="/minutes">Minutes of Meetings</a></li>
 							</ul>
 						</div>
 					</li>
