--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -30,6 +30,8 @@
 		<li><a href="/represent">Meet the Representatives</a></li>
 		<li class="divider"></li>
 		<li><a href="/announce">Announcements</a></li>
+		<li class="divider"></li>
+		<li><a href="/minutes">Minutes of Meetings</a></li>
 	</ul>
 	<ul id="dropdown2" class="dropdown-content center-align">
 		<li><a href="/senate">Student Senate</a></li>
@@ -73,6 +75,8 @@
 								<li><a href="/represent">Meet the Representatives</a></li>
 								<li class="divider"></li>
 								<li><a href="/announce">Announcements</a></li>
+								<li class="divider"></li>
+								<li><a href="/minutes">Minutes of Meetings</a></li>
 							</ul>
 						</div>
 					</li>
