--- a/src/templates/news.html
+++ b/src/templates/news.html
@@ -1,4 +1,5 @@
 {% extends "static.html" %}
+{% load thumbnail %}
 
 {% block page-info %}
 <div class="container">
@@ -33,7 +34,7 @@
 			<div class="collection">
 				{% for item in campus %}
 				<a class="collection-item avatar" href="/news/{{item.id}}">
-					<i class="material-icons biggercircle red">info</i>
+					<img class="biggercircle" src="{{ item.thumbnail.avatar.url }}" alt="" />
 					<br><span class="title">{{ item.title }}</span>
 				</a>
 				{% endfor %}
@@ -45,7 +46,7 @@
 			<div class="collection">
 				{% for item in inthenews %}
 				<a class="collection-item avatar" href="/news/{{item.id}}">
-					<i class="material-icons biggercircle red">info</i>
+					<img class="biggercircle" src="{{ item.thumbnail.avatar.url }}" alt="" />
 					<br><span class="title">{{ item.title }}</span>
 				</a>
 				{% endfor %}
@@ -57,7 +58,7 @@
 			<div class="collection">
 				{% for item in spotlight %}
 				<a class="collection-item avatar" href="/news/{{item.id}}">
-					<i class="material-icons biggercircle red">info</i>
+					<img class="biggercircle" src="{{ item.thumbnail.avatar.url }}" alt="" />
 					<br><span class="title">{{ item.title }}</span>
 				</a>
 				{% endfor %}
