Add all static link pages with complete backend support

--- a/src/static/site/css/main.css
+++ b/src/static/site/css/main.css
@@ -471,3 +471,11 @@ i.biggercircle {
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Signika', sans-serif;
 }
+
+@media only screen and (min-width: 650px) {
+
+    .fixed-height-300 {
+      height: 250px;
+      }
+
+  }
