--- a/src/templates/static.html
+++ b/src/templates/static.html
@@ -37,7 +37,7 @@
 	<ul id="dropdown2" class="dropdown-content center-align">
 		<li><a href="/senate">Student Senate</a></li>
 		<li class="divider"></li>
-		<li><a href="/minutes">Senate Reports</a></li>
+		<li><a href="/reports">Senate Reports</a></li>
 		<li class="divider"></li>
 		<li><a href="/mou">MoUs</a></li>
 		<li class="divider"></li>
@@ -65,6 +65,7 @@
 					<li><a class="dropdown-button" href="#!" data-activates="dropdown3">News and Events<i class="material-icons right">arrow_drop_down</i></a></li>
 					<li><a href="/nitk_life">NITK Life</a></li>
 					<li><a href="/blog">Blog</a></li>
+					<li><a href="/resources">Resources</a></li>
 					<li><a href="/faq">FAQs</a></li>
 				</ul>
 				<ul id="slide-out" class="side-nav collapsible collapsible-accordion">
@@ -86,7 +87,7 @@
 							<ul>
 								<li><a href="/senate">Student Senate</a></li>
 								<li class="divider"></li>
-								<li><a href="/minutes">Senate Reports</a></li>
+								<li><a href="/reports">Senate Reports</a></li>
 								<li class="divider"></li>
 								<li><a href="/mou">MoUs</a></li>
 								<li class="divider"></li>
@@ -107,6 +108,7 @@
 					</li>
 					<li class="bold"><a href="/nitk_life" class="collapsible-header waves-effect waves-teal">NITK Life</a></li>
 					<li class="bold"><a href="/blog" class="collapsible-header waves-effect waves-teal">Blog</a></li>
+					<li class="bold"><a href="/resources" class="collapsible-header waves-effect waves-teal">Resources</a></li>
 					<li class="bold"><a href="/faq" class="collapsible-header waves-effect waves-teal">FAQs</a></li>
 				</ul>
 				<a href="" id="sidenav" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
