--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -76,7 +76,7 @@
 			              <span class="card-title">The Beach Side Blues</span>
 			             		<ul class="collection">
 														{% for item in articles %}
-			                      <li class="collection-item"><a href="/announce/{{item.id}}">{{item.title}}</a></li>
+			                      <li class="collection-item"><a href="/blog/{{item.id}}">{{item.title}}</a></li>
 														{% endfor %}
 			                    </ul>
 			            </div>
