--- a/src/templates/news.html
+++ b/src/templates/news.html
@@ -31,7 +31,7 @@
 		<div class="col s10">
 			<div class="collection">
 				{% for item in campus %}
-				<a class="collection-item avatar" href="/news/{{item.id}}">
+				<a class="collection-item avatar" href="/news/{{item.id}}" style="padding-left:80px">
 					<img class="biggercircle" src="{{ item.thumbnail.avatar.url }}" alt="" />
 					<br><span class="title">{{ item.title }}</span>
 				</a>
@@ -43,7 +43,7 @@
 		<div class="col s10">
 			<div class="collection">
 				{% for item in inthenews %}
-				<a class="collection-item avatar" href="/news/{{item.id}}">
+				<a class="collection-item avatar" href="/news/{{item.id}}" style="padding-left:80px">
 					<img class="biggercircle" src="{{ item.thumbnail.avatar.url }}" alt="" />
 					<br><span class="title">{{ item.title }}</span>
 				</a>
@@ -55,7 +55,7 @@
 		<div class="col s10">
 			<div class="collection">
 				{% for item in spotlight %}
-				<a class="collection-item avatar" href="/news/{{item.id}}">
+				<a class="collection-item avatar" href="/news/{{item.id}}" style="padding-left:80px">
 					<img class="biggercircle" src="{{ item.thumbnail.avatar.url }}" alt="" />
 					<br><span class="title">{{ item.title }}</span>
 				</a>
