--- a/src/templates/announce.html
+++ b/src/templates/announce.html
@@ -22,8 +22,8 @@
 <div class="container">
      <div class="collection">
             {% for item in announcements %}
-                <a class="collection-item avatar" href="/announce/{{item.id}}">
-                        <i class="material-icons biggercircle red">play_arrow</i>
+                <a class="collection-item avatar" href="/announce/{{item.id}}" style="padding-left:80px">
+                        <img class="biggercircle" src="{{ item.thumbnail.avatar.url }}" alt="" />
                         <br><span class="title">{{item.title}}</span>
                 </a>
             {% endfor %}
