--- a/src/templates/calendar.html
+++ b/src/templates/calendar.html
@@ -25,7 +25,8 @@
 {% endblock %}
 
 {% block scripts %}
-<script src="{% static 'site/js/jquery.min.js' %}"></script>
+<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script src="{% static 'materialize/js/materialize.min.js' %}"></script>
 <script src="{% static 'site/js/moment.min.js' %}"></script>
 <script src="{% static 'site/js/fullcalendar.min.js' %}"></script>
 <script type="text/javascript">
@@ -58,6 +59,5 @@ $(document).ready(function() {
 		closeOnClick: true
 	});
 });
-$(".button-collapse").sideNav();
 </script>
 {% endblock %}
