--- a/src/templates/calendar.html
+++ b/src/templates/calendar.html
@@ -25,10 +25,6 @@
 {% endblock %}
 
 {% block scripts %}
-<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script src="{% static 'materialize/js/materialize.min.js' %}"></script>
-<script src="{% static 'site/js/moment.min.js' %}"></script>
-<script src="{% static 'site/js/fullcalendar.min.js' %}"></script>
 <script type="text/javascript">
 
 var eventlist = [];
@@ -52,7 +48,7 @@ $(document).ready(function() {
 		// put your options and callbacks here
 		events : eventlist
 	})
-	$(".dropdown-button").dropdown();
+	//$(".dropdown-button").dropdown();
 	$(".button-collapse").sideNav({
 		menuWidth: 320, // Default is 240
 		edge: 'left',
