--- a/src/templates/static.html
+++ b/src/templates/static.html
@@ -167,9 +167,10 @@
 	{% endblock %}
 
 	<!--  Scripts-->
-	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+	<script src={% static 'site/js/jquery.min.js' %}></script>
 	<script src="{% static 'materialize/js/materialize.min.js' %}"></script>
-
+	<script src="{% static 'site/js/moment.min.js' %}"></script>
+	<script src="{% static 'site/js/fullcalendar.min.js' %}"></script>
 
 	<script type="text/javascript">
 	$(document).ready(function(){
