--- a/src/templates/news.html
+++ b/src/templates/news.html
@@ -16,19 +16,16 @@
 {% block content %}
 {% load static %}
 <link href="{% static 'site/css/message.css' %}" rel="stylesheet">
-<div class="row">
-	<div class="col s2">
-		<div class="row center-align">
-			<h5>Categories</h5>
-			<ul class="tabs customtabs">
-				<li class="tab col s12" id="campusNews"><a href="">Campus News</a></li>
-				<li class="tab col s12" id="inTheNew"><a href="">In the News</a></li>
-				<li class="tab col s12" id="spotLights"><a href="">Spotlights</a></li>
-			</ul>
-		</div>
+	<div class="row center-align">
+		<ul class="tabs">
+			<li class="tab col s12" id="campusNews"><a href="">Campus News</a></li>
+			<li class="tab col s12" id="inTheNew"><a href="">In the News</a></li>
+			<li class="tab col s12" id="spotLights"><a href="">Spotlights</a></li>
+		</ul>
 	</div>
+<div class="row">
 	<div id="campus">
-		<div class="col s10">
+		<div class="col s12">
 			<div class="collection">
 				{% for item in campus %}
 				<a class="collection-item avatar" href="/news/{{item.id}}" style="padding-left:80px">
