Login for Smriti

--- a/src/smriti/templates/smriti/index.html
+++ b/src/smriti/templates/smriti/index.html
@@ -12,12 +12,12 @@
     <div class="row"><h1 class="center">Smriti</h1></div>
 
         <div class="container">
-        <form class="col s12 m12 l12">
+        <form action='/smriti/login/' method='POST' class="col s12 m12 l12"> {% csrf_token %}
             <div class="input-field col m6 s12 l6">
-                <input placeholder="Email" id="email" type="email" class="validate">
+                <input placeholder="Email" id="email" name="email" type="email" class="validate">
             </div>
             <div class="input-field col m6 s12 l6">
-                <input placeholder="Password" id="password" type="password">
+                <input placeholder="Password" id="password" name="password" type="password">
             </div>
             <div class="input-field col m6 s12 l6 center">
             <button class="btn-large waves-effect waves-light green-lighten-2" type="submit" name="action">
