Home template and browse template

--- a/src/smriti/templates/smriti/base.html
+++ b/src/smriti/templates/smriti/base.html
@@ -26,7 +26,7 @@
 		<nav class="black" role="navigation">
 			<div class="nav-wrapper container">
 				<a href="/" class="brand-logo">
-					<span class="pad">
+					<span class="pad smriti">
 						Smriti 2016
 					</span>
 				</a>
