--- a/src/smriti/templates/smriti/home.html
+++ b/src/smriti/templates/smriti/home.html
@@ -4,9 +4,20 @@
 
 {% block content %}
 <div class="container">
-    <h1> My Testimonials </h1>
-    <p class="flow-text"> Click on a testimonial to read the complete testimonial </p>
-	<div class="row center-align">
+    <section class="container" style="padding-top:15px">
+        <div class="row valign-wrapper">
+        <div class="col s4">
+            <img class="circle responsive-img" src="{% static 'site/img/presi.jpg' %}">
+        </div>
+        <div class="col s6">
+            <h4>Anirudh Ganesh</h4>
+        </div>
+        <div class="col s2">
+            <a class="btn-floating btn-large waves-effect waves-light teal lighten-3"><i class="material-icons">add</i></a>
+        </div>
+    </section>
+    <div class="divider"></div>
+	<div class="row center-align" style="padding-top:10px">
 		<div class="col s12 m8 offset-m2 offset-l2">
 			<a href="resource.link">
 				<div class="card grey lighten-3 waves-effect waves-block waves-light custom-card valign-wrapper">
@@ -19,7 +30,7 @@
                             <h4>Anirudh Ganesh</h4>
                         </div>
                     </div>
-						<p> resource.description </p>
+						<p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.  </p>
 					</div>
 				</div>
 			</a>
