--- a/src/smriti/templates/smriti/browse.html
+++ b/src/smriti/templates/smriti/browse.html
@@ -9,7 +9,7 @@
     <form class="col s12">
       <div class="row center-align">
 
-        <div class="card grey lighten-2 lighten-3 waves-effect waves-block waves-light valign-wrapper z-depth-2">
+        <div class="card white lighten-2 lighten-3 waves-effect waves-block waves-light valign-wrapper z-depth-2">
         <div class="input-field col s12 m8 offset-l2">
 
             <i class="material-icons prefix">search</i>
@@ -22,8 +22,34 @@
   </div>
     </section>
     <div class="divider"></div>
-    <p class="flow-text"> Browse by branches </p>
-	<div class="row center-align">
+    <section  style="padding-top:10px">
+    <ul class="collapsible collection with-header z-depth-2" data-collapsible="accordion">
+    <li class="collection-header"><h4>Browse By Branches</h4></li>
+    <li>
+     <div class="collapsible-header">Civil Engineering</div>
+     <div class="collapsible-body">
+         <div class="collection">
+        <a href="#!" class="collection-item">Alvin<span class="secondary-content">12CVxx</span></a>
+        <a href="#!" class="collection-item">Alvin<span class="secondary-content">12CVxx</span></a>
+        <a href="#!" class="collection-item">Alvin<span class="secondary-content">12CVxx</span></a>
+        <a href="#!" class="collection-item">Alvin<span class="secondary-content">12CVxx</span></a>
+      </div>
+    </div>
+   </li>
+   <li>
+       <div class="collapsible-header">Computer Engineering</div>
+       <div class="collapsible-body">
+           <div class="collection">
+          <a href="#!" class="collection-item">Alvin<span class="secondary-content">12COxx</span></a>
+          <a href="#!" class="collection-item">Alvin<span class="secondary-content">12COxx</span></a>
+          <a href="#!" class="collection-item">Alvin<span class="secondary-content">12COxx</span></a>
+          <a href="#!" class="collection-item">Alvin<span class="secondary-content">12COxx</span></a>
+        </div>
+      </div>
+   </li>
+ </ul>
+ </section>
+	<!--<div class="row center-align">
 		<div class="col s12 m6">
 			<a href="resource.link">
 				<div class="card-panel grey lighten-3 waves-effect waves-block waves-light valign-wrapper z-depth-2">
@@ -52,5 +78,5 @@
            </a>
        </div>
     </div>
-</div>
+</div>-->
 {% endblock content %}
