--- a/src/templates/article.html
+++ b/src/templates/article.html
@@ -7,7 +7,7 @@
         <div class="col s12">
             <a href="/" class="breadcrumb">Home</a>
             <a href="#!" class="breadcrumb">Blog</a>
-            <a href="#!" class="breadcrumb">Adobe – An opportunity to Dreamweave your summer</a>
+            <a href="#!" class="breadcrumb">{{article.title}}</a>
         </div>
     </div>
 
