--- a/src/static/site/css/main.css
+++ b/src/static/site/css/main.css
@@ -474,6 +474,9 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Signika', sans-serif;
 }
 
+p {
+    padding-top: 10px;
+}
 @media only screen and (min-width: 650px) {
 
     .fixed-height-300 {
