Testimonial page added

--- a/src/smriti/templates/smriti/home.html
+++ b/src/smriti/templates/smriti/home.html
@@ -19,7 +19,7 @@
     <div class="divider"></div>
 	<div class="row center-align" style="padding-top:10px">
 		<div class="col s12 m8 offset-m2 offset-l2">
-			<a href="resource.link">
+			<a href="/smriti/testimonial">
 				<div class="card grey lighten-3 waves-effect waves-block waves-light custom-card valign-wrapper">
 					<div class="card-content black-text">
                         <div class="row valign-wrapper">
