WIP: Write page

--- a/src/smriti/templates/smriti/testimonial.html
+++ b/src/smriti/templates/smriti/testimonial.html
@@ -15,7 +15,7 @@
     </section>
     <div class="divider"></div>
     <div class="row" style="padding-top:10px">
-		<div class="col s12 m12 l12 offset-l2">
+		<div class="col s12 m12 l12">
 				<div class="card grey lighten-3 waves-effect waves-block waves-light valign-wrapper">
 					<div class="card-content black-text container">
                         <div class="row valign-wrapper">
