--- a/src/templates/blog.html
+++ b/src/templates/blog.html
@@ -17,18 +17,27 @@
 <link href="{% static 'site/css/main.css' %}" rel="stylesheet">
 
 {% for item in article %}
-	<div class="row">
+    {% if forloop.counter0|divisibleby:2 %}
+    <div class="row">
+    {% endif %}
 		<div class="col s12 m6">
 			<div class="card-panel grey lighten-5 fixed-height">
-				<h3 class="align-left"><a href="/blog/{{item.id}}"> {{item.title}} </a></h3>
-				<div class= "row">
-						<p>
+                <div class="row">
+                    <div class="col s8">
+				<h5 class="align-left"><a href="/blog/{{item.id}}"> {{item.title}} </a></h3>
+                    </div>
+                    <div class="col s4">
+                        <img class="circle responsive-img" src="/media/{{item.prof_pic}}"/>
+                    </div>
+                </div>
 							<h6>By {{item.author.name}}</h6>
+                        <p>
               {{item.content|markdown|truncatechars_html:200}}
 						</p>
-					</div>
 			</div>
 		</div>
-	</div>
+    {% if not forloop.counter0|divisibleby:2 %}
+    </div>
+    {% endif %}
 {% endfor %}
 {% endblock %}
