Update navbar and home page

--- a/src/templates/static.html
+++ b/src/templates/static.html
@@ -35,7 +35,7 @@
 		<li><a href="/minutes">Minutes of Meetings</a></li>
 	</ul>
 	<ul id="dropdown2" class="dropdown-content center-align">
-		<li><a href="/senate">Student Senate</a></li>
+		<li><a href="/senate">Academic Senate</a></li>
 		<li class="divider"></li>
 		<li><a href="/reports">Senate Reports</a></li>
 		<li class="divider"></li>
@@ -50,6 +50,11 @@
 		<li class="divider"></li>
 		<li><a href="/calendar">Calendar</a></li>
 	</ul>
+	<ul id="dropdown4" class="dropdown-content center-align">
+		<li><a href="/nitk_life">NITK Life</a></li>
+		<li><a href="/blog">Literary Archive</a></li>
+		<li><a href="/resources">Resources</a></li>
+	</ul>
 	<div class="navbar-fixed">
 		<nav class="black" role="navigation">
 			<div class="nav-wrapper container">
@@ -63,9 +68,7 @@
 					<li><a class="dropdown-button" href="#!" data-activates="dropdown1">Student Council<i class="material-icons right">arrow_drop_down</i></a></li>
 					<li><a class="dropdown-button" href="#!" data-activates="dropdown2">Academics<i class="material-icons right">arrow_drop_down</i></a></li>
 					<li><a class="dropdown-button" href="#!" data-activates="dropdown3">News and Events<i class="material-icons right">arrow_drop_down</i></a></li>
-					<li><a href="/nitk_life">NITK Life</a></li>
-					<li><a href="/blog">Blog</a></li>
-					<li><a href="/resources">Resources</a></li>
+					<li><a class="dropdown-button" href="#!" data-activates="dropdown4">Students' Life<i class="material-icons right">arrow_drop_down</i></a></li>
 					<li><a href="/faq">FAQs</a></li>
 				</ul>
 				<ul id="slide-out" class="side-nav collapsible collapsible-accordion">
@@ -85,7 +88,7 @@
 					<li class="bold"><a class="collapsible-header waves-effect waves-teal">Academics</a>
 						<div class="collapsible-body">
 							<ul>
-								<li><a href="/senate">Student Senate</a></li>
+								<li><a href="/senate">Academic Senate</a></li>
 								<li class="divider"></li>
 								<li><a href="/reports">Senate Reports</a></li>
 								<li class="divider"></li>
@@ -107,7 +110,7 @@
 						</div>
 					</li>
 					<li class="bold"><a href="/nitk_life" class="collapsible-header waves-effect waves-teal">NITK Life</a></li>
-					<li class="bold"><a href="/blog" class="collapsible-header waves-effect waves-teal">Blog</a></li>
+					<li class="bold"><a href="/blog" class="collapsible-header waves-effect waves-teal">Literary Archive</a></li>
 					<li class="bold"><a href="/resources" class="collapsible-header waves-effect waves-teal">Resources</a></li>
 					<li class="bold"><a href="/faq" class="collapsible-header waves-effect waves-teal">FAQs</a></li>
 				</ul>
